# openxpki

./: .VERSION_DEFINITION  .gitignore  .gitmodules  .perltidyrc  .readthedocs.yaml  .travis.yml  .vergen_revision_state  AUTHORS  CHANGELOG  ISSUES  LICENSE  MYPERL.md  Makefile  PERL_VERSION.inc  QUICKSTART.md  README.md  README.pod  git-primer.md
doc/: README  (+10 more)
trunk/deployment/: Makefile  Makefile.in  README  check_modules.pl  configure  configure.in
trunk/deployment/etc/: openxpki-configure  openxpki.conf
trunk/deployment/etc/config.d/: profile.yaml  system.yaml  testing.yaml
trunk/deployment/etc/config.d/realm.tpl/: crypto.yaml  publishing.yaml  token.yaml
trunk/deployment/etc/config.d/smartcard/: cardinfo.yaml  cardstatus.yaml  employee.yaml  groupinfo.yaml  policy.yaml  publishing.yaml  upninfo.yaml
trunk/deployment/etc/config.d/system/: realms.yaml  server.yaml  watchdog.yaml
trunk/deployment/etc/initscripts/suse/: openxpki.rc  openxpki.sysconfig
trunk/deployment/etc/templates/default/: Makefile  acl.xml  auth.xml  config.xml  database.xml  ldappublic.xml  log.conf  notification.xml  openxpki.conf  openxpki.conf.in  profile.xml  token.xml  workflow.xml  workflow_activity.xml  workflow_activity_certificate_issuance.xml  workflow_activity_certificate_ldap_publishing.xml  workflow_activity_certificate_revocation_request.xml  workflow_activity_certificate_signing_request.xml  workflow_activity_crl_issuance.xml  workflow_activity_dataexchange.xml  workflow_activity_nice.xml  workflow_activity_scep_request.xml  workflow_activity_smartcard_personalization.xml  (+35 more)
(+5206 files in other folders)
