# AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_REVISION($Revision: 323 $)
AC_INIT(OpenXPKI, 0.9, openxpki-users@lists.sf.net)

AC_COPYRIGHT(Copyright 2005-2006 OpenXPKI)
AC_CONFIG_SUBDIRS(src/openca-sv)

dnl Check for install program
AC_PROG_INSTALL

## this is a really dirty hack to avoid NONE in paths
if test x"$prefix" = xNONE; then prefix=${ac_default_prefix}; fi
if test x"$exec_prefix" = xNONE; then exec_prefix=${prefix}; fi

## this is a hack to get a real exec_prefix path and not
## something like ${prefix}
EXEC_PREFIX=$exec_prefix
AC_SUBST(EXEC_PREFIX)

dnl template directory
AC_ARG_WITH( template-prefix,
	AC_HELP_STRING( [--with-template-prefix=TEMPLATEPREFIX], [sets template configuration prefix (default is SYSCONFDIR/openxpki/templates)]),
	template_prefix=$withval, template_prefix=${sysconfdir}/openxpki/templates)
AC_SUBST( template_prefix)

AC_PATH_PROG( POD2MAN, pod2man, pod2man,
	$PATH:/sbin:/usr/sbin:/usr/local/sbin)

AC_CONFIG_FILES( Makefile bin/openxpki-metaconf bin/openxpkictl bin/openxpkiadm )

AC_OUTPUT
